refactor controllers